--- a/Meeting/2021-05-17.md
+++ b/Meeting/2021-05-17.md
@@ -3,12 +3,18 @@
 ## 질문
 - LV1. 다트게임
   => 시뮬레이션인가..?? 이런건 어케 쉽게 풀까?
+   > 다음에 풀기
+  
 - stack[] st = new stack()[10];
   선언 시 for문으로 스택배열안에 초기화 시켜줘야함
    ex) for(int i=0; i< st.length; i++){
       st[i] = new stack<>();        
      }
+  > reference type의 경우, null로 초기값디 들어간다
+  
 - set 종류 => tree set, hash set, 등등 외워야할까?
+  > 공부 완료
+  
 - 정규표현식 외우기.. 알려줘
   > s.replaceAll("[^a-z]","");
     이거는 왜 a-z가 아닌거를 바꾸지?
