--- a/Meeting/2021-05-24.md
+++ b/Meeting/2021-05-24.md
@@ -8,7 +8,13 @@
 
 3. 전화번호목록
  String 정렬 특징
-   
-
 
 4. 큰수만들기
+ - https://programmers.co.kr/learn/courses/30/lessons/42883
+
+5. 객체를 만들어야하는 기준이 있을까?
+
+6. static 변수들은 잘 안쓰는지? (여기서는 객체의 로컬(?)변수)
+
+7. 숫자의표현
+ - https://programmers.co.kr/learn/courses/30/lessons/12924
