--- a/Meeting/2021-05-24.md
+++ b/Meeting/2021-05-24.md
@@ -20,3 +20,6 @@
  - https://programmers.co.kr/learn/courses/30/lessons/12924
 
 8. 프렌즈 블록 - 혁차니꺼 보기
+
+9. compare 비교
+   fileNameList.sort(Comparator.comparing(FileName::getHead).thenComparing(Comparator.naturalOrder()));
