--- a/Meeting/2021-05-24, 2021-06-01.md
+++ b/Meeting/2021-05-24, 2021-06-01.md
@@ -1,4 +1,4 @@
-# 2021-05-24 스터디
+# 2021-05-24 스터디, 2021-06-01 스터디
  
 ## 질문
 1. queue interface 란?
@@ -23,3 +23,9 @@
 
 9. compare 비교
    fileNameList.sort(Comparator.comparing(FileName::getHead).thenComparing(Comparator.naturalOrder()));
+   
+
+10. 못푼문제
+방금그곡, - https://programmers.co.kr/learn/courses/30/lessons/17683
+    후보키 - https://programmers.co.kr/learn/courses/30/lessons/42890
+    수식 최대화 - https://programmers.co.kr/learn/courses/30/lessons/67257
