--- a/Meeting/2021-05-24, 2021-06-01.md
+++ b/Meeting/2021-05-24, 2021-06-01.md
@@ -29,3 +29,7 @@
 방금그곡, - https://programmers.co.kr/learn/courses/30/lessons/17683
     후보키 - https://programmers.co.kr/learn/courses/30/lessons/42890
     수식 최대화 - https://programmers.co.kr/learn/courses/30/lessons/67257
+    순위검색 - https://programmers.co.kr/learn/courses/30/lessons/72412
+    두개이하로다른비트 - https://programmers.co.kr/learn/courses/30/lessons/77885
+    
+    
