--- a/Meeting/2021-06-28.md
+++ b/Meeting/2021-06-28.md
@@ -17,3 +17,7 @@
 
 - 길찾기게임
  - https://programmers.co.kr/learn/courses/30/lessons/42892
+
+- 기둥과 보 설치
+ - https://programmers.co.kr/learn/courses/30/lessons/60061
+ - 빡구현
