--- a/Meeting/2021-06-28.md
+++ b/Meeting/2021-06-28.md
@@ -7,6 +7,11 @@
 - 최고의 집합
   - https://programmers.co.kr/learn/courses/30/lessons/12938
 
+- 풍선터트리기 (lv3)
+ - https://programmers.co.kr/learn/courses/30/lessons/68646
+ - 아이디어
+
+
 ㅇ 신기한 것
 - 징검다리 건너기 ( 정리할만해보이기도.. 파라메트릭 서치 )
  - https://programmers.co.kr/learn/courses/30/lessons/64062
