--- a/Meeting/2021-06-28.md
+++ b/Meeting/2021-06-28.md
@@ -11,6 +11,9 @@
  - https://programmers.co.kr/learn/courses/30/lessons/68646
  - 아이디어
 
+- 거스름돈 (lv3)
+  - https://programmers.co.kr/learn/courses/30/lessons/12907
+
 
 ㅇ 신기한 것
 - 징검다리 건너기 ( 정리할만해보이기도.. 파라메트릭 서치 )
