--- a/Meeting/2021-06-28.md
+++ b/Meeting/2021-06-28.md
@@ -29,3 +29,8 @@
 - 기둥과 보 설치
  - https://programmers.co.kr/learn/courses/30/lessons/60061
  - 빡구현
+
+ㅇ 질문
+- 매칭점수
+ - https://programmers.co.kr/learn/courses/30/lessons/42893
+ - 정규표현식 만들때 , temp 만든 이유는?
