--- a/Meeting/2021-06-28.md
+++ b/Meeting/2021-06-28.md
@@ -13,6 +13,10 @@
 
 - 거스름돈 (lv3)
   - https://programmers.co.kr/learn/courses/30/lessons/12907
+  
+- 길찾기게임 (lv3)
+  - https://programmers.co.kr/learn/courses/30/lessons/42892
+  - 트리 구조 구현 (재귀))
 
 
 ㅇ 신기한 것
