--- a/Meeting/2021-06-28.md
+++ b/Meeting/2021-06-28.md
@@ -38,3 +38,10 @@
 - 매칭점수
  - https://programmers.co.kr/learn/courses/30/lessons/42893
  - 정규표현식 만들때 , temp 만든 이유는?
+
+
+ㅇ 어렵다
+- 스타수열
+ - https://programmers.co.kr/learn/courses/30/lessons/70130?language=java
+- 110 옮기기
+ - https://programmers.co.kr/learn/courses/30/lessons/77886
